# aima

./: .env.example  .gitignore  AIMA.md  AIMA_EXPLAINED.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  import_sheet.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/connectors/: base.py
data/connectors/ga4/: connector.py
data/connectors/hubspot/: connector.py
data/connectors/klaviyo/: connector.py
data/connectors/meta_ads/: connector.py
data/connectors/shopify/: connector.py
data/pipelines/: dbt_project.yml  profiles.yml
data/pipelines/models/marts/: campaign_performance.sql  customer_engagement.sql  customer_rfm.sql
data/pipelines/models/staging/: sources.yml  stg_customers.sql  stg_events.sql  stg_orders.sql
data/schemas/: init.sql
frontend/: Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agent/: page.tsx
frontend/app/attribution/: page.tsx
frontend/app/brand-monitor/: page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/clv-churn/: page.tsx
frontend/app/content-studio/: page.tsx
frontend/app/customers/: page.tsx
frontend/app/import/: page.tsx
frontend/app/segments/: page.tsx
frontend/components/: sidebar.tsx
k8s/helm/: values.yaml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_events_orders_features.py
mlflow/: Dockerfile
modules/agent/agents/: planner.py
modules/attribution/models/: neural_mmm.py
modules/brand_monitor/models/: absa.py
modules/campaign_predictor/models/: predictor.py
modules/clv_churn/models/: churn_predictor.py
modules/content_studio/generators/: email_generator.py
modules/content_studio/models/: brand_voice.py
modules/customer_intelligence/api/: router.py
modules/customer_intelligence/clustering/: drift_detector.py  engine.py
modules/customer_intelligence/features/: engineer.py
modules/customer_intelligence/models/: transformer.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: aima_platform.json
monitoring/grafana/provisioning/dashboards/: default.yml
platform/: __init__.py
platform/api/: Dockerfile  config.py  database.py  main.py  models.py
platform/api/routers/: agent.py  alerts.py  attribution.py  brand_monitor.py  campaigns.py  clv_churn.py  connectors.py  content.py  customers.py  health.py  import_data.py  segments.py
platform/workers/: celery_app.py
platform/workers/tasks/: inference.py  sync.py
scripts/: download_datasets.py  prepare_training_data.py  train_module1.py  train_module2.py  train_module6.py
tests/unit/: test_clustering.py  test_connectors.py  test_feature_engineer.py
