[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aima"
version = "0.1.0"
description = "Artificial Intelligence for Marketing Analytics - Open Source AI Marketing Intelligence Platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "AIMA Contributors" }]
requires-python = ">=3.11"
keywords = ["marketing", "ai", "machine-learning", "analytics", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "kafka-python>=2.0.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "datasets>=2.19.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.38",
    "mlflow>=2.13.0",
    "pymc>=5.14.0",
    "causalml>=0.15.0",
    "langchain>=0.2.3",
    "langgraph>=0.1.5",
    "openai>=1.30.1",
    "boto3>=1.34.115",
    "minio>=7.2.7",
    "dbt-core>=1.8.2",
    "dbt-postgres>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.6",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
]

research = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "plotly>=5.22.0",
    "shap>=0.45.1",
    "lime>=0.2.0.1",
    "econml>=0.15.0",
]

[project.scripts]
aima = "platform.api.main:app"
aima-worker = "platform.workers.main:start"

[tool.hatch.build.targets.wheel]
packages = ["modules", "platform", "data"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["modules", "platform", "data"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=modules --cov=platform --cov-report=term-missing"
